# NOCUDARuntime

./: CMakeLists.txt  README.md  main.cpp
include/: Logger.h  Runtime.h  core.h  cudaWarp.h  enginebuilder.h  logger.h  macro.h  person.h  runtime.h  tensor.h  types.h
include/nlohmann/: json.hpp
include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp
include/nlohmann/detail/conversions/: to_chars.hpp
include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp
include/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
pybind11/: .codespell-ignore-lines  pyproject.toml
pybind11/.github/: CONTRIBUTING.md
pybind11/docs/: benchmark.rst  changelog.rst  classes.rst  compiling.rst  faq.rst  installing.rst  release.rst  upgrade.rst
pybind11/docs/advanced/: classes.rst  exceptions.rst  functions.rst  misc.rst  smart_ptrs.rst
pybind11/docs/advanced/cast/: eigen.rst  stl.rst  strings.rst
pybind11/docs/advanced/pycpp/: numpy.rst  utilities.rst
pybind11/include/pybind11/: attr.h  numpy.h  pybind11.h  pytypes.h
pybind11/include/pybind11/detail/: class.h  common.h  init.h  internals.h
pybind11/tests/: pytest.ini
pybind11/tools/: FindPythonLibsNew.cmake  pybind11Config.cmake.in
python/: bindings.cpp
src/: Base.cpp  EngineBuilder.cpp  Runtime.cpp  core.cpp  cudaWarp.cu  detection.cpp  enginebuilder.cpp  main.cpp  person.cpp  runtime.cpp  tensor.cpp  types.cpp
